Fixed dark mode input-check border color

--- a/Havit.Bootstrap/scss/_variables.scss
+++ b/Havit.Bootstrap/scss/_variables.scss
@@ -25,8 +25,6 @@ $form-feedback-tooltip-font-size:   .75rem;
 $form-feedback-margin-top:          .125rem;
 $form-feedback-font-size:           .75rem;
 
-$form-check-input-border:           1px solid $gray-300;
-
 $modal-backdrop-opacity:            .25;
 
 $offcanvas-horizontal-width:        500px;
